[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ice"
version = "0.1"
description = "Description of your project"
authors = [{name = "Your Name", email = "your.email@example.com"}]
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.13.3",
    "pandas>=0.20.3",
    "pytest==5.2.2",
    "biopython>=1.70",
    "coverage>=4.4.1",
    "pytest-cov==2.5.1",
    "matplotlib>=2.1.0",
    "scipy>=0.19.1",
    "scikit-learn>=1.3.2",
    "xlrd>=1.1.0",
    "xlsxwriter>=1.0.2"
]

[project.urls]
homepage = "https://github.com/hchen-lilly/ICE2"
documentation = "https://github.com/hchen-lilly/ICE2#readme"

[project.scripts]
synthego_ice = "ice.analysis:single_sanger_analysis_cli"
synthego_ice_batch = "ice.analysis:multiple_sanger_analysis_cli"

[tool.setuptools]
packages = ["ice"]
include-package-data = true
zip-safe = false

[tool.setuptools.package-data]
htmltools = ["py.typed"]

[tool.flake8]
ignore = "E203, E302, E402, E501, E704, F403, F405, W503"
extend-exclude = "docs, .venv, venv, typings, e2e, build"
